--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
     </ul>
   </header>
   <h1>Menta y Peperina</h1>
-  <section>
-    <article>
+  <section class="contenedor">
+    <article class="contenedor1">
       <img class="foto1" src="imagenes/fideos.jpg" alt="Fideos con verduras">
-      <p class="colorParrafo">APRENDE A HACER RECETAS VEGETARIANAS Y VEGANAS
+      <p class="colorParrafo negrita">APRENDE A HACER RECETAS VEGETARIANAS Y VEGANAS
         FACILES Y RAPIDAS</p>
     </article>
-    <article>
-      <img class="foto2" src="imagenes/20220505_130218.jpg" alt="sopa de zapallo">
-      <p class="colorParrafo textRight">PROBA, DESCUBRI, INNOVÁ CON ESTAS RECETAS
+    <article class="contenedor2">
+      <img class="foto2 " src="imagenes/20220505_130218.jpg" alt="sopa de zapallo">
+      <p class="colorParrafo negrita">PROBA, DESCUBRI, INNOVÁ CON ESTAS RECETAS
         NO ES NECESARIO SER VEGETARIANO PARA COMER VEGGIE</p>
     </article>
   </section>
-  <footer>
-    <span class="ig">Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a>
-    </span>
-  </footer>
+  <br>
 </body>
+<footer>
+  <span class="ig">Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a>
+  </span>
+</footer>
 
 </html>
