--- a/marcas.html
+++ b/marcas.html
@@ -24,23 +24,31 @@
     <p class="subtitulos">Estas son las marcas que utilizamos y recomendamos utilizar,no solo por la calidad de los
         productos sino tambien
         porque algunos son veganos y sin tacc.</p>
-    <img class="fotoMarca" src="imagenes/veggieland.jpg" alt="logo veggieland">
-    <h3>Veggieland</h3>
-    <p>Marca argentina vegetariana</p>
-    <img class="fotoMarca" src="imagenes/vegetalex logo.jpg" alt="logo vegetalex">
-    <h3>Vegetalex</h3>
-    <p>Marca argentina vegana y vegetariana</p>
-    <img class="fotoMarca" src="imagenes/vivet.png" alt="vivet logo">
-    <h3>Vivet</h3>
-    <p>Marca argentina de lacteos veganos</p>
-    <img class="fotoMarca" src="imagenes/greenlife.jpg" alt="green life logo">
-    <h3>Green Life</h3>
-    <p>Marca de productos vegana</p>
-
-    <footer>
-        <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
-    </footer>
-
+    <section class="marcasAlineadas">
+        <article class="marcaVeggieland">
+            <img class="fotoMarca" src="imagenes/veggieland.jpg" alt="logo veggieland">
+            <h3>Veggieland</h3>
+            <p>Marca argentina vegetariana</p>
+        </article>
+        <article class="marcaVegetalex">
+            <img class="fotoMarca" src="imagenes/vegetalex logo.jpg" alt="logo vegetalex">
+            <h3>Vegetalex</h3>
+            <p>Marca argentina vegana y vegetariana</p>
+        </article>
+        <article class="marcaVivet">
+            <img class="fotoMarca" src="imagenes/vivet.png" alt="vivet logo">
+            <h3>Vivet</h3>
+            <p>Marca argentina de lacteos veganos</p>
+        </article>
+        <article class="marcaGreenLife">
+            <img class="fotoMarca" src="imagenes/greenlife.jpg" alt="green life logo">
+            <h3>Green Life</h3>
+            <p>Marca de productos vegana</p>
+        </article>
+    </section>   
+    <br>
 </body>
-
+<footer>
+    <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
+</footer>
 </html>
