agregue media query

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -34,7 +34,7 @@
         gusto. También hay religiones que lo impiden y hay quienes por
         consideraciones medioambientales toman esta decisión.
     </P>
-    <img src="imagenes/cerdito.jpg" alt="cerdito" width="300">
+    <img src="imagenes/giphy.gif" alt="gif comiendo brocoli" width="300">
     <p class="colorParrafo"> Esperamos que te gusten nuestras recetas como a nosotros.</p>
 </body>
 <br>
