--- a/recetas.html
+++ b/recetas.html
@@ -22,8 +22,8 @@
         </ul>
     </header>
     <h1>RECETAS</h1>
-    <ul class="listaColum">
-        <li class="subtitulos negrita"><a href="https://www.google.com/">Veganas</a> </li>
+    <ul>
+        <li class="subtitulos negrita fondoVeganas"><a href="https://www.google.com/">Veganas</a> </li>
         <li class="subtitulos negrita"><a href="https://www.google.com/">Sopas</a> </li>
         <li class="subtitulos negrita"><a href="https://www.google.com/">Ensaladas</a> </li>
         <li class="subtitulos negrita"><a href="https://www.google.com/">Pastas</a> </li>
