--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li class="espacio"><a href="/views/contacto.html">Contacto </a> </li>
     </ul>
   </header>
-  <h1>Menta y Peperina</h1>
+  <h1 class="titulo">Menta y Peperina</h1>
   <section class="fotosAlineadas">
     <article class="contenedor1">
       <img class="foto1" src="/imagenes/fideos.jpg" alt="Fideos con verduras">
