--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/reset.css" type="text/css">
-  <link rel="stylesheet" href="/styles/style.css" type="text/css">
+  <link rel="stylesheet" href="./styles/reset.css" type="text/css">
+  <link rel="stylesheet" href="./styles/style.css" type="text/css">
   <title>Inicio</title>
 </head>
 
 <body>
   <header>
-    <img class="logo" src="/imagenes/logito.png" alt="logo">
+    <img class="logo" src="./imagenes/logito.png" alt="logo">
     <ul class="navegacion">
-      <li class="seleccionado espacio"> <a href="/index.html">Inicio</a> </li>
-      <li class="espacio"><a href="/views/recetas.html">Recetas </a> </li>
-      <li class="espacio"><a href="/views/sobrenosotros.html">Nosotros </a> </li>
-      <li class="espacio"><a href="/views/marcas.html">Marcas </a> </li>
-      <li class="espacio"><a href="/views/contacto.html">Contacto </a> </li>
+      <li class="seleccionado espacio"> <a href="index.html">Inicio</a> </li>
+      <li class="espacio"><a href="views/recetas.html">Recetas </a> </li>
+      <li class="espacio"><a href="views/sobrenosotros.html">Nosotros </a> </li>
+      <li class="espacio"><a href="views/marcas.html">Marcas </a> </li>
+      <li class="espacio"><a href="views/contacto.html">Contacto </a> </li>
     </ul>
   </header>
   <h1 class="titulo">Menta y Peperina</h1>
   <section class="fotosAlineadas">
     <article class="contenedor1">
-      <img class="foto1" src="/imagenes/fideos.jpg" alt="Fideos con verduras">
+      <img class="foto1" src="imagenes/fideos.jpg" alt="Fideos con verduras">
       <p class="colorParrafo negrita">APRENDE A HACER RECETAS VEGETARIANAS Y VEGANAS
         FACILES Y RAPIDAS</p>
     </article>
     <article class="contenedor2">
-      <img class="foto2 " src="/imagenes/20220505_130218.jpg" alt="sopa de zapallo">
+      <img class="foto2 " src="imagenes/20220505_130218.jpg " alt="sopa de zapallo">
       <p class="colorParrafo negrita">PROBA, DESCUBRI, INNOVÁ CON ESTAS RECETAS
         NO ES NECESARIO SER VEGETARIANO PARA COMER VEGGIE</p>
     </article>
