--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <img class="logo" src="./imagenes/logito.png" alt="logo">
-    <ul class="navegacion">
+    <ul>
       <li class="seleccionado espacio"> <a href="index.html">Inicio</a> </li>
       <li class="espacio"><a href="views/recetas.html">Recetas </a> </li>
       <li class="espacio"><a href="views/sobrenosotros.html">Nosotros </a> </li>
@@ -22,7 +22,7 @@
     </ul>
   </header>
   <h1 class="titulo">Menta y Peperina</h1>
-  <section class="fotosAlineadas">
+  <section class="contenidoPrincipal">
     <article class="contenedor1">
       <img class="foto1" src="imagenes/fideos.jpg" alt="Fideos con verduras">
       <p class="colorParrafo negrita">APRENDE A HACER RECETAS VEGETARIANAS Y VEGANAS
@@ -34,11 +34,10 @@
         NO ES NECESARIO SER VEGETARIANO PARA COMER VEGGIE</p>
     </article>
   </section>
-  <br>
+  <footer>
+    <span class="ig">Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a>
+    </span>
+  </footer>
 </body>
-<footer>
-  <span class="ig">Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a>
-  </span>
-</footer>
 
 </html>
