--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/reset.css" type="text/css">
   <link rel="stylesheet" href="./styles/style.css" type="text/css">
   <title>Inicio</title>
 </head>
 
 <body>
-  <header>
-    <img class="logo" src="./imagenes/logito.png" alt="logo">
+  <header class="d-flex justify-content-between">
+    <img class="navbar-brand" src="./imagenes/logito.png" width="60" alt="logo">
     <ul>
       <li class="seleccionado espacio"> <a href="index.html">Inicio</a> </li>
       <li class="espacio"><a href="views/recetas.html">Recetas </a> </li>
@@ -22,22 +24,35 @@
     </ul>
   </header>
   <h1 class="titulo">Menta y Peperina</h1>
-  <section class="contenidoPrincipal">
-    <article class="contenedor1">
-      <img class="foto1" src="imagenes/fideos.jpg" alt="Fideos con verduras">
-      <p class="colorParrafo negrita">APRENDE A HACER RECETAS VEGETARIANAS Y VEGANAS
-        FACILES Y RAPIDAS</p>
+  <section class="container">
+    <article class="row">
+      <div class="col-sm-12 col-md-6">
+        <img class="img-fluid rounded w-75 foto" src="imagenes/fideos.jpg" alt="Fideos con verduras">
+      </div>
+      <div class="col-sm-12 col-md-6 align-items-center d-flex">
+        <p class="colorParrafo negrita">APRENDE A HACER RECETAS VEGETARIANAS Y VEGANAS
+          FACILES Y RAPIDAS</p>
+      </div>
     </article>
-    <article class="contenedor2">
-      <img class="foto2 " src="imagenes/20220505_130218.jpg " alt="sopa de zapallo">
-      <p class="colorParrafo negrita">PROBA, DESCUBRI, INNOVÁ CON ESTAS RECETAS
-        NO ES NECESARIO SER VEGETARIANO PARA COMER VEGGIE</p>
+    <article class="row">
+      <div class="col-sm-12 col-md-6 align-items-center d-flex order-2 order-md-1">
+        <p class="colorParrafo negrita">PROBA, DESCUBRI, INNOVÁ CON ESTAS RECETAS
+          NO ES NECESARIO SER VEGETARIANO PARA COMER VEGGIE</p>
+      </div>
+      <div class="col-sm-12 col-md-6 order-1 order-md-2 text-end">
+        <img class="img-fluid rounded w-75 foto" src="imagenes/20220505_130218.jpg " alt="sopa de zapallo">
+      </div>
+
     </article>
+    </div>
   </section>
   <footer>
     <span class="ig">Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a>
     </span>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
