--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles/reset.css" type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="./styles/style.css" type="text/css">
+  <link rel="stylesheet" href="./css/index.css" type="text/css">
   <title>Inicio</title>
 </head>
 
@@ -23,20 +24,20 @@
       <li class="espacio"><a href="views/contacto.html">Contacto </a> </li>
     </ul>
   </header>
-  <h1 class="titulo">Menta y Peperina</h1>
+  <h1 class="titulo animate__animated animate__bounce">Menta y Peperina</h1>
   <section class="container">
     <article class="row">
       <div class="col-sm-12 col-md-6">
         <img class="img-fluid rounded w-75 foto" src="imagenes/fideos.jpg" alt="Fideos con verduras">
       </div>
-      <div class="col-sm-12 col-md-6 align-items-center d-flex">
-        <p class="colorParrafo negrita">APRENDE A HACER RECETAS VEGETARIANAS Y VEGANAS
+      <div class="col-sm-12 col-md-6 align-items-center d-flex ">
+        <p class="colorTextoPrincipal  negrita">APRENDE A HACER RECETAS VEGETARIANAS Y VEGANAS
           FACILES Y RAPIDAS</p>
       </div>
     </article>
     <article class="row">
       <div class="col-sm-12 col-md-6 align-items-center d-flex order-2 order-md-1">
-        <p class="colorParrafo negrita">PROBA, DESCUBRI, INNOVÁ CON ESTAS RECETAS
+        <p class="colorParrafo negrita ">PROBA, DESCUBRI, INNOVÁ CON ESTAS RECETAS
           NO ES NECESARIO SER VEGETARIANO PARA COMER VEGGIE</p>
       </div>
       <div class="col-sm-12 col-md-6 order-1 order-md-2 text-end">
